--- a/requirements.txt
+++ b/requirements.txt
@@ -17,21 +17,27 @@ cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.7.1
 entrypoints==0.3
+evdev==1.4.0
 files==1.1.1
+Flask==2.0.1
 gitdb==4.0.5
 GitPython==3.1.14
+gunicorn==20.1.0
 idna==2.10
 ipykernel==5.5.0
 ipython==7.21.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
+itsdangerous==2.0.1
 jedi==0.18.0
 Jinja2==2.11.3
+joblib==1.0.1
 jsonschema==3.2.0
 jupyter-client==6.1.11
 jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
+keyboard==0.13.5
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
 matplotlib==3.3.4
@@ -47,27 +53,35 @@ packaging==20.9
 pandas==1.2.3
 pandocfilters==1.4.3
 parso==0.8.1
+pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.1.2
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
 protobuf==3.15.5
+ptyprocess==0.7.0
 pyarrow==3.0.0
 pycparser==2.20
 pydeck==0.6.1
 Pygments==2.8.1
+pynput==1.7.3
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
+python-xlib==0.31
 pytz==2021.1
 pyzmq==22.0.3
 requests==2.25.1
+scikit-learn==0.23.2
+scipy==1.7.1
 Send2Trash==1.5.0
 six==1.15.0
+sklearn==0.0
 smmap==3.0.5
-streamlit==0.78.0
+streamlit==0.88.0
 terminado==0.9.2
 testpath==0.4.4
+threadpoolctl==2.2.0
 toml==0.10.2
 toolz==0.11.1
 tornado==6.1
@@ -78,4 +92,5 @@ validators==0.18.2
 watchdog==2.0.2
 wcwidth==0.2.5
 webencodings==0.5.1
+Werkzeug==2.0.1
 widgetsnbextension==3.5.1
